--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
       border-bottom:1px solid #ddd;
     }
     .topbar strong{color:#d32f2f}
-
     .sponsored{
       background:#1f6b2a;
       color:#fff;
@@ -56,17 +55,10 @@
       margin:0 auto;
     }
 
-    h1{
-      font-size:34px;
-      margin:10px 0 10px;
-    }
-    .subtitle{
-      font-size:17px;
-      color:#444;
-      margin-bottom:18px;
-    }
+    h1{font-size:34px;margin:10px 0 10px}
+    .subtitle{font-size:17px;color:#444;margin-bottom:18px}
 
-    /* HERO (DESKTOP = 2 colunas | MOBILE = overlay) */
+    /* ===== HERO (DESKTOP 2 COLUNAS) ===== */
     .hero{
       max-width:780px;
       margin:12px auto 18px;
@@ -77,40 +69,42 @@
 
       display:grid;
       grid-template-columns: 1fr 1fr;
-      min-height:220px;
+      position:relative; /* IMPORTANTÍSSIMO pro overlay no mobile */
     }
 
     .hero-left{
       background:#fff;
       display:flex;
       align-items:center;
-      justify-content:flex-start;
+      justify-content:center;
       padding:22px;
+      min-height:220px;
     }
 
     .hero-badge{
-      background:#111;
+      background:rgba(0,0,0,.78);
       color:#fff;
-      padding:14px 18px;
       border-radius:10px;
-      max-width:320px;
+      padding:14px 14px;
+      max-width:330px;
+      box-shadow:0 6px 18px rgba(0,0,0,.18);
     }
     .hero-badge .ttl{
       font-weight:800;
-      letter-spacing:.5px;
+      letter-spacing:.6px;
       font-size:18px;
-      margin-bottom:4px;
+      margin-bottom:6px;
+      text-transform:uppercase;
     }
     .hero-badge .sub{
       font-size:13px;
       opacity:.95;
-      line-height:1.35;
     }
 
     .hero-right{
-      position:relative;
-      background:#f3f3f3;
+      background:#0f3a2f;
       min-height:220px;
+      position:relative;
     }
 
     .hero-right img{
@@ -122,41 +116,29 @@
 
     .hero-fallback{
       display:none;
-      position:absolute;
-      inset:0;
       align-items:center;
       justify-content:center;
-      text-align:center;
-      padding:18px;
-      color:#444;
+      height:100%;
+      color:#fff;
       font-weight:700;
-      background:#f3f3f3;
+      padding:18px;
     }
 
-    /* INFO BOX */
+    /* Content blocks */
     .info{
       background:var(--card);
       border:1px solid var(--border);
       border-radius:12px;
       padding:18px;
-      margin:18px 0 10px;
+      margin:24px 0;
     }
-    .info h2{
-      font-size:18px;
-      margin-bottom:10px;
-    }
-    .info ul{
-      margin-left:18px;
-    }
-    .info li{
-      margin:6px 0;
-      color:#222;
-    }
+    .info h2{font-size:18px;margin-bottom:10px}
+    .info ul{padding-left:18px}
+    .info li{margin:8px 0}
 
-    /* CTA */
     .cta{
       text-align:center;
-      margin:18px 0 8px;
+      margin:26px 0;
     }
     .cta a{
       background:var(--btn);
@@ -197,40 +179,41 @@
       margin:0 8px;
     }
 
-    /* ✅ MOBILE: vira 1 coluna e a badge fica POR CIMA da imagem */
-    @media(max-width:768px){
+    /* ===== MOBILE (OVERLAY CERTINHO) ===== */
+    @media (max-width:768px){
       h1{font-size:28px}
       .subtitle{font-size:16px}
       .cta a{font-size:18px;padding:14px 26px}
 
       .hero{
-        grid-template-columns: 1fr;
-        min-height:unset;
+        grid-template-columns: 1fr; /* vira 1 coluna */
       }
 
-      /* some com a coluna branca e vira overlay */
+      /* a coluna branca vira overlay */
       .hero-left{
         position:absolute;
-        z-index:3;
+        inset:0;
         background:transparent;
-        padding:14px;
-        width:100%;
+        min-height:unset;
+        padding:12px;
+        align-items:flex-start;
         justify-content:flex-start;
+        z-index:3;
+        pointer-events:none; /* não atrapalha clique/scroll */
       }
 
       .hero-badge{
-        background:rgba(0,0,0,.75);
-        max-width:unset;
+        max-width:100%;
       }
       .hero-badge .ttl{font-size:16px}
       .hero-badge .sub{font-size:12px}
 
+      /* controla altura no celular */
       .hero-right{
         min-height:210px;
       }
-
       .hero-right img{
-        height:210px; /* controla a altura no celular */
+        height:210px;
       }
     }
   </style>
